<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Audionomy</string>
    <string name="butt_play">play</string>
    <string name="butt_pause">pause</string>
    <string name="butt_next">next</string>
    <string name="butt_prev">previous</string>
    <string name="butt_stop">stop</string>
    <string name="butt_purge_list">Clear playlist</string>
    <string name="active">active</string>
    <string name="mode_default">One by one</string>
    <string name="mode_repeat_one">Repeat one</string>
    <string name="mode_repeat_all">Repeat all</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="artist">Artist</string>
    <string name="album">Release</string>
    <string name="song">Recording</string>
    <string name="artists">Artists</string>
    <string name="albums">Releases</string>
    <string name="songs">Recordings</string>
    <string name="action_choose">I meant to&#8230;</string>
    <string name="playback_mode">Playback mode</string>
    <string name="playback_remote">playback remote</string>
    <string name="playback_local">playback local</string>
    <string name="refetch">refetch</string>
    <string name="enqueue">enqueue</string>
    <string name="fetch">fetch</string>
    <string name="delete">Delete</string>
    <string name="toast_deleted">Selected song(s) have been removed</string>
    <string name="delete_title">Deleting tracks</string>
    <string name="delete_confirm">Delete tracks?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="vk_relogin">Relogin to vkontakte.ru</string>
    <string name="app_audio_folder">Audio folder name</string>
    <string name="fix_integrity">Fix data integrity</string>
    <string name="vk_sufficient_score">VK audio match sufficient score</string>
    <string name="api_requery_limit">API requery limit</string>
    <string name="execute">Execute</string>
    <string name="apply">Apply</string>
    <string name="max_search_results">Search results limit</string>
    <string name="fill_tags">Reset ID3 tags</string>
    <string name="settings_saved">Settings saved</string>
    <string name="connection_error">Error: connection down</string>
    <string name="gibberish_data_error">Error: server returned illegible response</string>
    <string name="enqueued">Item enqueued for playback</string>
    <string name="activity_media">Media</string>
    <string name="activity_player">Player</string>
    <string name="activity_settings">Maintenance</string>
    <string name="menu_go_remote">Go remote</string>
    <string name="menu_go_local">Go local</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_enqueue">Enqueue</string>
    <string name="menu_download">Download</string>
    <string name="menu_invert_selection">Invert selection</string>
    <string name="player_playlist_empty">Playlist empty</string>
    <string name="no_results">No entries to display</string>
    <string name="fetching_data">Retrieving data</string>
    <string name="clear_playlist">Clear playlist</string>

</resources>