<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/artist_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_mic" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/artist_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/albums"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </LinearLayout>

            <TextView
                android:id="@+id/artist_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/artists"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>
    </LinearLayout>

    <RadioGroup
        android:id="@+id/radio_works"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radio_releases"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/albums" />

        <RadioButton
            android:id="@+id/radio_recordings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/songs" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_enqueue"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/enqueue"
            android:visibility="gone" />

        <Button
            android:id="@+id/button_fetch"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/fetch"
            android:visibility="gone" />
    </LinearLayout>

    <ListView
        android:id="@+id/list_works"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".9" >
    </ListView>

</LinearLayout>