<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="top"
    android:gravity="top"
    android:padding="5dip"
    android:shrinkColumns="1"
    android:stretchColumns="1" >

    <TableRow
        android:id="@+id/tableRow0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dip"
            android:text="@string/app_audio_folder"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/text_audio_folder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/text_vk_relogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dip"
            android:text="@string/vk_relogin"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Button
            android:id="@+id/button_vk_relogin"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/title_background"
            android:onClick="vkRelogin"
            android:text="@string/execute"
            android:textColor="@color/title_text" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/text_fix_integrity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dip"
            android:text="@string/fix_integrity"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Button
            android:id="@+id/button_fix_integrity"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/title_background"
            android:onClick="fixIntegrity"
            android:text="@string/execute"
            android:textColor="@color/title_text" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fill_tags"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Button
            android:id="@+id/button_fill_tags"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/title_background"
            android:onClick="fillTags"
            android:text="@string/execute"
            android:textColor="@color/title_text" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/text_label_max_search_results"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max_search_results"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/search_results_limit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/title_background"
            android:ems="9"
            android:inputType="numberDecimal"
            android:textColor="@color/title_text" >

            <requestFocus />
        </EditText>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/text_label_api_requery_limit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/api_requery_limit"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/api_requery_limit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/title_background"
            android:ems="9"
            android:inputType="numberDecimal"
            android:textColor="@color/title_text" >

            <requestFocus />
        </EditText>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <Button
            android:id="@+id/button_apply"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:background="@color/title_background"
            android:onClick="apply"
            android:text="@string/apply"
            android:textColor="@color/title_text" />
    </TableRow>

</TableLayout>